--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.17.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.3",
@@ -20,10 +21,15 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "webpack-manifest-plugin": "^4.1.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --config ./config/webpack.config.dev --hot",
+    "start": "npx webpack serve --config ./config/webpack.config.dev",
     "build": "webpack --config ./config/webpack.config.prod"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "react-router-dom": "^6.2.1"
   }
 }
